--- a/style.css
+++ b/style.css
@@ -1,18 +1,107 @@
-#image{
-    text-align: center;
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    min-width: 100vw;
+    margin: 0;
+    padding: 0;
 }
-.search{
 
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.luck{
-    
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-li {
-    display: inline;
-  }
-ul{
-    text-align: right
+
+.search{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:17px;
+    margin-top: 25px;
+    width: 550px;
+    height: 25px;
+    border-radius: 50px;
+    border: 1px solid rgb(220,220,220);
+    padding: 10px;
 }
-.footer1{
-  display: block;  
+
+.search:hover, .search:focus{
+    border:1px solid rgb(255,255,255);
+    box-shadow: 0px 1px 8px 0px rgb(200,200,200);
+}
+
+.button{
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(100,100,100);
+    font-size:15px;
+    background-color: rgb(244,244,244);
+    margin: 30px 5px;
+    height: 40px;
+    width: 140px;
+    border: none;
+    border-radius: 5px;
+}
+
+.button:hover{
+    cursor: pointer;
+    color: black;
+    border: solid 1px rgb(200,200,200);
+    background-image: -moz-linear-gradient(top, rgb(250,250,250), rgb(240,240,240));
+}
+
+footer{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    background-color: rgb(244,244,244);
+    padding: 12px 20px;;
+    border-top: solid 1px;
+    border-top-color: rgb(220,220,220);
+}
+
+a{
+    text-decoration: none;
+    color: rgb(100,100,100);
+    margin: 0 10px;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+header{
+    display: flex;
+    flex-flow: row-reverse;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    padding: 17px 17px;
+}
+
+header a{
+    color: black;
+}
+
+.menu-image{
+    width: 17px;
+}
+
+.menu-link{
+    opacity: .6;
+}
+
+.menu-link:hover{
+    opacity: .9;
+}
+
+.account-img{
+    width: 32px;
 }
